--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
+	implementation 'com.apollographql.federation:federation-graphql-java-support:2.0.1'
 
 	implementation 'org.modelmapper:modelmapper:2.4.2'
 
